--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Ariston Project - One.sln"
+    "dotnet.defaultSolution": "Ariston-Project---One.sln"
 }
